# obj-software-renderer

./: CMakeLists.txt  main.cpp
